fixed spacing on icons

--- a/styles/style.css
+++ b/styles/style.css
@@ -2652,6 +2652,7 @@ Footer Top Area Style
 .single-widget .social-icon li {
   display: inline-block;
   margin-right: 8px;
+  margin-left: 8px;
   margin-bottom: 0;
 }
 
